--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ Home Page
 .main {
   max-width: var(--max-width);
 }
+/* navbar */
 .homepage-header {
   width: 100vw;
   padding: 2rem;
@@ -165,6 +166,7 @@ Home Page
 .start-slideshow:hover {
   color: var(--clr-primary-gray);
 }
+/* gallery */
 .gallery-container {
   width: 100vw;
   display: grid;
@@ -218,6 +220,9 @@ Home Page
   .gallery-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+  .homepage-header {
+    padding: 1rem;
+  }
   .navbar-container {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -233,7 +238,6 @@ Home Page
     font-size: 1.2rem;
     line-height: 1.4rem;
   }
-
   .single-gallery-image-text h3 {
     font-size: 0.8rem;
     font-weight: 300;
@@ -391,17 +395,26 @@ Slider Page
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    margin-top: 4rem;
+    margin-top: 2rem;
   }
   .slider-image-container {
     margin-bottom: 0rem;
   }
   .gallery-img {
     width: 30vw;
+    max-height: 28rem;
+    object-fit: cover;
   }
+  /* text info part */
   .slider-info-container {
     padding: 0 6rem;
-    margin-top: 4rem;
+    margin-top: 2rem;
+  }
+  .gallery-text {
+    font-size: 1rem;
+  }
+  .text-container {
+    margin-top: 2rem;
   }
 }
 
@@ -473,7 +486,7 @@ Slider Footer
 ===============
 */
 .footer-container {
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 .footer-inner-container {
   display: flex;
@@ -525,4 +538,9 @@ Slider Footer
 }
 .line2-100 {
   border-top: 2px solid var(--clr-primary-gray);
+}
+@media screen and (min-width: 980px) {
+  .footer-container {
+    margin-top: 2rem;
+  }
 }
